[package]
name = "sin"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
rust-i18n = "2"
i18n = "0.1.4"
rusqlite = { version = "0.30.0", features = ["bundled"] }
lazy_static = "1.4.0"
once_cell = "1.18.0"
dotenv = "0.15.0"
